# Fault-tolerant

./: .clang-format  .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  Makefile  README.md  SECURITY.md  TEST_RESULTS.md  docker-compose.yml
.github/workflows/: ci.yml
api/: openapi.yaml
docs/: ARCHITECTURE.md  FAILURE_MODES.md
include/kv/: cluster.hpp  common.hpp  gateway.hpp  http_server.hpp  metrics.hpp  raft.hpp  sqlite_store.hpp
postman/: Fault-Tolerant-Sharded-KV-Store.postman_collection.json
scripts/: benchmark.py  demo.sh
src/: cluster.cpp  gateway.cpp  http_server.cpp  main.cpp  metrics.cpp  raft.cpp  sqlite_store.cpp
tests/: integration_test.py  unit_tests.cpp
